fixed skills height on mobile

--- a/styles/Skills.module.css
+++ b/styles/Skills.module.css
@@ -1,9 +1,17 @@
+.cont {
+  height: 110vh;
+  display: block;
+}
+
 .Container {
-  height: 85vh;
   display: flex;
   flex-direction: column;
   align-content: center;
   justify-content: center;
+}
+
+.Title {
+  text-align: center;
 }
 
 .SkillsContainer {
@@ -78,4 +86,22 @@
   align-items: center;
   color: #777990;
   letter-spacing: 1.3px;
+}
+
+@media (max-width: 769px) {
+
+  .SkillsContainer {
+    flex-wrap: wrap;
+  }
+
+  .Title {
+    margin: 0;
+    margin-top: 2em;
+  }
+
+  .Column {
+    width: 100%;
+    height: 100%;
+    margin-bottom: 2em;
+  }
 }
